# Raysterizer

./: CMakeLists.txt  README.md  cmake_install.cmake
BuildDependencies/: color.vs  common.h  frag.spv  raysterizer_config.json
BuildDependencies/raysterizer/shaders/source/: cast.h  rayterizer.rgen  rayterizer.rmiss  rayterizer_backup.rgen  rayterizer_backup.rmiss  shadows_ray_trace.comp  sharpen.comp  textured_mesh_array.frag  textured_mesh_variable_descriptor.frag  textured_mesh_variable_descriptor.vert  tone_map.frag  tone_map.vert
BuildDependencies/raysterizer/shaders/source/ao/: ao_denoise_bilateral_blur.comp  ao_denoise_reprojection.comp  ao_ray_trace.comp  ao_upsample.comp
BuildDependencies/raysterizer/shaders/source/gi/: gi_common.glsl  gi_irradiance_border_update.comp  gi_irradiance_probe_update.comp  gi_probe_visualization.frag  gi_probe_visualization.vert  gi_ray_trace.rchit  gi_ray_trace.rgen  gi_ray_trace.rmiss  gi_sample_probe_grid.comp
BuildDependencies/raysterizer/shaders/source/ground_truth/: ground_truth_path_trace.rchit  ground_truth_path_trace.rgen
BuildDependencies/raysterizer/shaders/source/other/: compute_normal_from_depth.comp  deferred.frag  g_buffer.vert  reprojection.glsl  scene_descriptor_set.glsl  skybox.frag  skybox.vert  taa.comp
BuildDependencies/raysterizer/shaders/source/reflections/: reflections_denoise_atrous.comp  reflections_denoise_reprojection.comp  reflections_ray_trace.rchit  reflections_ray_trace.rgen  reflections_ray_trace.rmiss  reflections_upsample.comp
BuildDependencies/raysterizer/shaders/source/shadows/: shadows_denoise_atrous.comp  shadows_ray_trace.comp  (+2 more)
BuildDependencies/resources/fonts/: blender_fontgen.py
BuildDependencies/resources/materials/: ph3_red.rgmat.json  raygun.rgmat.json
BuildDependencies/resources/materials/ui/: button_marker.rgmat.json  slider_marker.rgmat.json
BuildDependencies/resources/objects/cube/: Cube_obj.mtl
BuildDependencies/resources/shaders/: any_hit_test.rahit  closesthit.rchit  compute.h  compute_shader_shared.def  fxaa.h  gpu_material.def  instance_offset_table.def  miss.rmiss  miss_test.rmiss  payload.h  raygen.h  raygen.rgen  raygen_test.rgen  raytracer_bindings.h  rough_blur.h  shadow.rmiss  shadowMiss.rmiss  uniform_buffer_object.def  vertex.def
Raysterizer/: CMakeLists.txt
Raysterizer/Raysterizer/: constants.h  exports.def  main.cpp  pch.h
Raysterizer/Raysterizer/analysis/: glslang_analyzer.cpp  glslang_analyzer.h  spirv_analyzer.cpp  spirv_analyzer.h  spirv_virtual_machine.cpp  spirv_virtual_machine.h
Raysterizer/Raysterizer/frontend/opengl/: glad.h  khrplatform.h  opengl_buffer_manager.cpp  opengl_buffer_manager.h  opengl_context.cpp  opengl_context.h  opengl_frame_buffer_manager.cpp  opengl_frame_buffer_manager.h  opengl_shader_manager.cpp  opengl_shader_manager.h  opengl_state.cpp  opengl_state.h  opengl_texture_manager.cpp  opengl_texture_manager.h  opengl_utils.cpp  opengl_utils.h
Raysterizer/Raysterizer/hooks/: hook.h  hook_manager.cpp  hook_manager.h  opengl_hooks.cpp  opengl_hooks.h  wgl_opengl_hooks.cpp  wgl_opengl_hooks.h
Raysterizer/Raysterizer/middleware/: draw_calls.cpp  draw_calls.h  gl_utils.h  pipeline_manager.cpp  pipeline_manager.h  shader_converter.cpp  shader_converter.h
Raysterizer/Raysterizer/pass/: blue_noise.cpp  blue_noise.h  brdf_integrate_lut.cpp  brdf_integrate_lut.h  common_resources.cpp  common_resources.h  cubemap_prefilter.cpp  cubemap_prefilter.h  cubemap_sh_projection.cpp  cubemap_sh_projection.h  ddgi.cpp  ddgi.h  deferred_shading.cpp  deferred_shading.h  equirectangular_to_cubemap.cpp  equirectangular_to_cubemap.h  gbuffer.cpp  gbuffer.h  hosek_wilkie_sky_model.cpp  hosek_wilkie_sky_model.h  ray_traced_ao.cpp  ray_traced_ao.h  ray_traced_reflections.cpp  ray_traced_reflections.h  ray_traced_shadows.cpp  ray_traced_shadows.h  sky_environment.cpp  sky_environment.h  temporal_aa.cpp  temporal_aa.h  tone_map.cpp  tone_map.h
Raysterizer/tests/: CMakeLists.txt
Raysterizer/tests/10.3.asteroids_instanced/: asteroids_instanced.cpp  glad.cpp  glad.h  mesh.h
Raysterizer/tests/5.1.framebuffers/: framebuffers.cpp
Raysterizer/tests/8.advanced_glsl_ubo/: advanced_glsl_ubo.cpp  camera.h  model.h  shader.h  stb_image.h
Raysterizer/tests/bare/: main.cpp
Raysterizer/tests/nomad_inject/: main.cpp
Raysterizer/tests/simple_opengl/: filesystem.h  main.cpp  mesh.h
Raysterizer/tests/simple_opengl/resources/materials/: floor.rgmat.json  glass.rgmat.json  ph3_black.rgmat.json  wall.rgmat.json
Raysterizer/tests/simple_opengl/resources/materials/ui/: bg.rgmat.json  button_bg.rgmat.json  header_bg.rgmat.json  metal.rgmat.json  text.rgmat.json
cmake/: copy_dll.cmake
include/: acceleration_structure.h  buffer.h  command_buffer.h  command_pool.h  compute_pipeline.h  config.h  constants.h  container.h  context.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  disk_cacher.h  fence.h  frame_buffer.h  frame_graph.h  frame_node.h  frame_pass_entry.h  frame_resource_entry.h  frame_resource_node.h  frame_type_traits.h  hash.h  image.h  image_view.h  pch.h  pipeline.h  pipeline_layout.h  pointer_view.h  profiler.h  queue_batch_manager.h  render_frame.h  render_frames.h  render_pass.h  resource_manager.h  sampler.h  semaphore.h  shader_binding_table.h  shader_module.h  shader_module_manager.h  shader_reflection.h  (+7 more)
src/: acceleration_structure.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  config.cpp  container.cpp  context.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  disk_cacher.cpp  fence.cpp  frame_buffer.cpp  frame_graph.cpp  frame_node.cpp  frame_resource_entry.cpp  frame_resource_node.cpp  image.cpp  main.cpp  pipeline_layout.cpp  pointer_view.cpp  profiler.cpp  queue_batch_manager.cpp  render_frame.cpp  render_frames.cpp  render_pass.cpp  resource_manager.cpp  sampler.cpp  semaphore.cpp  shader_binding_table.cpp  shader_module.cpp  shader_module_manager.cpp  shader_reflection.cpp  texture.cpp  vma_allocator.cpp  vulkan_dispatch_loader.cpp  vulkan_utils.cpp  vulkan_window.cpp  wrappers.cpp
